src/test/ui/issues/issue-37550.stderr
error[E0723]: function pointers in const fn are unstable
  --> $DIR/issue-37550.rs:3:9
   |
LL |     let x = || t;
   |         ^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
